@@ -82,6 +82,7 @@ class Roda
               @captures.concat(match.captures)
             end
           else
+            RodaPlugins.warn ":host matcher used with regexp value without :host_matcher_captures app option, no capturing will be done.  Starting in Roda 3, the :host matcher will automatically capture if the value is a Regexp.  Set :host_matcher_captures app option to enable capturing." if hostname.is_a?(Regexp)
             hostname === host
           end
         end
